# snake_wasm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  check.sh  index.html  snake.js
.github/workflows/: cd.yml  pages.yml  rust.yml
src/: lib.rs  main.rs
src/components/: food.rs  grid.rs  mod.rs  snake.rs
www/: index.html  index.js  package.json
