[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'
lto = "thin"

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }