[package]
name = "snake"
version = "0.1.0"
authors = ["Aleksander Romashin <cooladress@mail.ru>"]
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"